# flet-todo-android

./: .gitignore  README.md  pyproject.toml  uv-pyproject.toml
src/: main.py  task.py  todo_app.py
src/todo_android/: __init__,py  task_service.py
src/todo_android/models/: __init__.py  task_model.py
src/todo_android/schemas/: __init__.py  schema.py  task_schema.py
src/todo_android/storages/: __init__.py  base_storage.py  task_storage.py
