[project]
name = "flet-todo-android"
version = "0.1.0"
description = "A basic Flet To-Do application for Android with SQLAlchemy2.0"
authors = [
    {name = "goajos",email = "jappecremers@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "flet==0.26.0",
    "pydantic",
    "SQLAlchemy==2.0.36"
]

[tool.flet]
product = "flet-todo-android"

[tool.flet.app]
path = "src" 

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
packages = [
    { include = "todo_android", from = "src" }
]